--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <p
                     style="color: white;
                     padding-top: 15px;">
-                    Layanan travel kami menyediakan paket lengkap dengan kenyamanan, keamanan, dan pengalaman terbaik
+                    Layanan Sewa travel kami menyediakan paket lengkap dengan kenyamanan, keamanan, dan pengalaman terbaik
                 </p>
             </div>
             <div class="div-img">
